[package]
name = "map"
version = "0.1.0"
authors = ["alexrichton <developers@marcopolo.link>"]
license = "GPL-3.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cli = { package = "map-cli", path = "cli" }

[workspace]
# This should only list projects that are not
# in the dependency tree in any other way
members = [
    "common/crypto",
	"common/errors",
	"common/ed25519",
	"common/hash",
	"common/logger",
	"common/store",
	"common/metrics",
	"executor",
	"core",
    "chain",
    "pool",
	"consensus",
    "generator",
	"service",
	"rpc",
	"network",
	"tools/genKey"
]
