[package]
name = "map-consensus"
version = "0.1.0"
authors = ["MAP <developers@marcopolo.link>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.8"
failure = "0.1.7"
enum-display-derive = "0.1.0"
map-core = { package = "map-core", path = "../core" }
#serde = { version = "1.0.102", features = ["derive"] }
bincode = "1.2.0"
ed25519 = { package = "map-ed25519", path = "../common/ed25519" }
errors = { package = "map-errors", path = "../common/errors" }
rand = "0.6.5"