[package]
name = "generator"
version = "0.1.0"
authors = ["MAP <developers@marcopolo.link>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.8"
failure = "0.1.7"
enum-display-derive = "0.1.0"
hash = { package = "map-hash", path = "../common/hash" }
map-crypto = { package = "crypto", path = "../common/crypto" }
map-core = { package = "map-core", path = "../core" }
map-consensus = { path = "../consensus" }
map-network = { path = "../network" }
executor = { package = "map-executor", path = "../executor" }
chain = { package = "chain", path = "../chain" }
pool = { package = "pool", path = "../pool" }
#serde = { version = "1.0.102", features = ["derive"] }
bincode = "1.2.0"
ed25519 = { package = "map-ed25519", path = "../common/ed25519" }
errors = { package = "map-errors", path = "../common/errors" }
num-rational = "0.2.2"
num-bigint = "0.2.3"
num-traits = "0.2.8"
futures = "0.1.25"
rand = "0.6.5"
tokio = "0.1.22"
