[package]
name = "pool"
version = "0.1.0"
authors = ["MAP <developers@marcopolo.link>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.8"
smallvec = "0.6.10"
map-core = { path = "../core" }
chain = { package = "chain", path = "../chain" }